<resources>
    <string name="app_name">Estequiometria</string>
    <string name="action_about">Sobre</string>
    <string name="action_info">Informação</string>
    <string name="aboutActivity">Sobre</string>
    <string name="about1">
        Universidade Federal do Ceará
        &lt;br />Centro de Ciências
        &lt;br />Departamento de Química Orgânica e Inorgânica
        &lt;br />Grupo de Desenvolvimento de Ferramentas Educacionais em Química
    </string>
    <string name="about2">
        &lt;br />Estequiometria: Software Educacional

        &lt;br />&lt;br />&lt;b>Autor:&lt;/b> Prof. José Nunes da Silva Jr. (nunes.ufc@gmail.com)

        &lt;br />&lt;br />&lt;b>Colaboração:&lt;/b>

        &lt;br />Antônio José Melo Leite Jr.
        &lt;br />Francisco Serra Oliveira Alexandre

        &lt;br />&lt;br />&lt;b>Outras Ferramentas Educacionais:&lt;/b>

        &lt;br />Conheça outras ferramentas desenvolvidas pelo grupo.
    </string>
    <string name="about3">Acesse:&#160;</string>
    <string name="about4">http://www.quimica.ufc.br/gdfceq</string>
    <string-array name="modulesNames">
        <item>Cálculos Químicos</item>
        <item>Cálculos de Fórmulas</item>
        <item>Cálculo Estequiométrico</item>
        <item>Cálculo de Volumetria</item>
        <item>Todas as Interações</item>
    </string-array>
    <string-array name="interationsNames">
        <item>Massa Atômica</item>
        <item>Massa e Moles</item>
        <item>Massa Molar e Moles</item>
        <item>Rendimento de uma reação</item>
        <item>Cálculos de concetração de soluções</item>
        <item>Titulação Ácido-Base</item>
        <item>Padronização de NaOH</item>
        <item>Preparo de soluções por diluição e dissolução</item>
        <item>Reações sucessivas</item>
        <item>Coeficientes Estequimétricos</item>
        <item>Reagente impuro em reações</item>
        <item>Reagente limitante e excesso</item>
        <item>Pureza e Rendimento</item>
        <item>Fórmula percentual e mínima</item>

    </string-array>
        <string name="m1d">
            Nesta seção, você aprenderá a calcular as massa atômicas e moleculares a partir da unidade de massa atômica,
            e como se calcula a massa de um elemento quimico que se apresenta na natureza como diferentes isotopos.

            \n\nAtravés do conceito de mol, você também aprenderá a calcular o número de átomos/moléculas/ions/prótons/nêutrons presentes em uma determinada massa de uma substância.

            \n\nToque nos botões abaixo para explorar cada um dos conceitos.

        </string>
        <string name="m2d">
            Quando um químico obtém uma nova substância,
            uma das primeiras providências que ele toma
            é a determinação de sua composição
            percentual ou centesimal. A partir da composição percentual é possível
            determinar a fórmula mínima da substância e
            a partir desta é possível chegar a sua fórmula molecular.

            \nVamos aprender como encontrar
            estas três fórmulas: percentual, mínima emolecular.
        </string>
        <string name="m3d">Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            Nulla iaculis accumsan purus, et dictum tellus ornare sed. Aliquam erat volutpat.
            Duis ipsum nunc, molestie euismod interdum eget, varius id turpis.
            Vivamus vulputate sapien ut felis molestie ornare. Cras dapibus ultricies viverra.
            Mauris porta mattis dui, in imperdiet nulla lobortis sed.
            Sed ac lacinia massa, in faucibus purus.
        </string>
        <string name="m4d">Descrição: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
            Nulla iaculis accumsan purus, et dictum tellus ornare sed.
            Aliquam erat volutpat. Duis ipsum nunc, molestie euismod interdum eget, varius id turpis.
            Vivamus vulputate sapien ut felis molestie ornare. Cras dapibus ultricies viverra.
            Mauris porta mattis dui, in imperdiet nulla lobortis sed.
            Sed ac lacinia massa, in faucibus purus.
        </string>
    <string-array name="module1Topics">
        <item>Unidade de massa atômica (u)</item>
        <item>Massa atômica (MA)</item>
        <item>Massa de um elemento químico</item>
        <item>Massa molecular (MM)</item>
        <item>Mol e massa molar</item>
    </string-array>
    <string-array name="module2Topics">
        <item>Fórmula percentual ou centesimal</item>
        <item>Fórmula mínima, empírica ou estequiométrica</item>
        <item>Fórmula molecular</item>
        <item>Água de hidratação</item>
        <item>Análise por combustão</item>
    </string-array>
    <string-array name="module3Topics">
        <item>Introdução</item>
        <item>Reagente em excesso</item>
        <item>Rendimento de Reação</item>
        <item>Pureza de Reagente</item>
        <item>Reações sucessivas</item>
    </string-array>
    <string-array name="module4Topics">
        <item>Unidades de concentração</item>
        <item>Preparo de soluções</item>
        <item>Volumetria de precipitação</item>
        <item>Volumetria de oxi-redução</item>
        <item>Volumetria ácido-base</item>
        <item>Padronização de solução de NaOH</item>
    </string-array>
    <string-array name="module1TopicsDesc">
        <item>Unidade de massa atômica (u)</item>
        <item>Massa atômica (MA)</item>
        <item>Massa atômica de um elemento químico (massa atômica média)</item>
        <item>Massa molecular (MM)</item>
        <item>Massa molar</item>
        <item>Cálculo do número de mols (cálculo da quantidade de matéria)</item>
    </string-array>
    <string-array name="module2TopicsDesc">
        <item>Unidade de massa atômica (u)</item>
        <item>Massa atômica (MA)</item>
        <item>Massa atômica de um elemento químico (massa atômica média)</item>
        <item>Massa molecular (MM)</item>
        <item>Massa molecular (MM)</item>
    </string-array>
    <string-array name="module3TopicsDesc">
        <item>Unidade de massa atômica (u)</item>
        <item>Massa atômica (MA)</item>
        <item>Massa atômica de um elemento químico (massa atômica média)</item>
        <item>Massa molecular (MM)</item>
        <item>Massa molecular (MM)</item>
    </string-array>
    <string-array name="module4TopicsDesc">
        <item>Volumetria de precipitação</item>
        <item>Volumetria de oxi-redução</item>
        <item>Volumetria ácido-base</item>
        <item>Padronização de solução de NaOH</item>
    </string-array>
        <string name="m1t1.1">
            As unidades usuais de medidas de massa, tais como grama e quilograma, não são adequadas para expressar a massa de um átomo, uma vez que a masssa dos átomos são muito pequenas.&lt;br />&lt;br />

            Em 1962, em um Congresso Internacional de Química, foi escolhida a &lt;b>unidade de massa atômica (u)&lt;/b>, definida como a massa de 1/12 do &lt;sup>&lt;small>12&lt;/small>&lt;/sup>C :&lt;br />&lt;br />
        </string>
        <string name="m1t1.2">
            &lt;b>Isótopos&lt;/b> são átomos que apresentam o mesmo número atômico (Z), isto é apresentam o mesmo número de prótons, e diferentes números de massa (A). Essa diferença no número de massa ocorre devido a diferença no número de nêutrons.
            &lt;br />&lt;br />Exemplo: Isótopos do carbono.
        </string>
    <string name="m1t1.3">
        &lt;sup>&lt;small>12&lt;/small>&lt;/sup>C :&lt;br />
        A = Z + n&lt;br />
        A = 6 + 6 = 12&lt;br />&lt;br />

        &lt;sup>&lt;small>13&lt;/small>&lt;/sup>C :&lt;br />
        A = Z + n &lt;br />
        A = 6 + 7 = 13&lt;br />&lt;br />

        &lt;sup>&lt;small>14&lt;/small>&lt;/sup>C :&lt;br />
        A = Z + n&lt;br />
        A = 6 + 8 = 14&lt;br />

    </string>
    <string name="tvMolarMass">Massa Molar (g/mol):</string>
    <string name="btCalc">Calcular</string>
    <string name="tvNMols">Número de Moles:</string>
    <string name="rbWater">Água</string>
    <string name="rbEthanol">Etanol</string>
    <string name="rbBenzene">Benzeno</string>
    <string name="rbAcetic">Ácido acético</string>
    <string name="tvPurity">Pureza (%):</string>
    <string name="tvSolu">Soluto:</string>
    <string name="rbLiquid">Liquido</string>
    <string name="rbSolid">Sólido</string>
    <string name="tvSol">Solvente:</string>
    <string name="tvVolSol">Volume solvente (ml):</string>
    <string name="tvMol">Molaridade (M):</string>
    <string name="tvMol2">Molalidade (molal):</string>
    <string name="tvmm">% m/m:</string>
    <string name="tvmv">% m/v:</string>
    <string name="tvvv">% v/v:</string>
        <string name="tvInt61">
            Um frasco tem uma solução de HCl com concentração desconhecida. Esta solução é titulada com NaOH até atingir o ponto de equivalência.

            &lt;br />&lt;br />&lt;b>Insira as informações solicitadas e clique no botão "Calcular".&lt;/b>

        </string>
    <string name="tvInt62">&lt;br />HCl&lt;small>(aq)&lt;/small> + NaOH&lt;small>(aq)&lt;/small> &#8594; NaCl&lt;small>(aq)&lt;/small> + H&lt;small>2&lt;/small>O&lt;small>l&lt;/small>&lt;br /></string>
    <string name="tvHcl">HCl&lt;small>(aq)&lt;/small></string>
    <string name="tvNaOH">NaOH&lt;small>(aq)&lt;/small></string>
    <string name="tvVolHcl">Volume de HCl (mL):</string>
    <string name="tvVolNaoh">Volume de NaOH (mL):</string>
    <string name="tvMolaridade">Molaridade:</string>
    <string name="tvResults">&lt;br />Resultados:&lt;br /></string>
    <string name="tvNMolsHCl">Nº de Moles HCl:</string>
    <string name="tvMolaridadeHCl">Molaridade HCl:</string>
    <string name="tv1SolDil">Solução diluida:\n</string>
    <string name="tv2Vol">Volume da solução diluida (mL):</string>
    <string name="tv3Molar">Concentração final (Mol/L):</string>
    <string name="tv4Molar">Concentração solução stock (Mol/L):</string>
    <string name="tvUni">Unidade:</string>
    <string name="rbMolar">Molaridade</string>
    <string name="rbMassm" formatted="false">% massa/massa</string>
    <string name="tvConcD">Contentração desejada (Mol/L):</string>
    <string name="tvDensSol">Densidade do soluto (g/Ml):</string>
    <string name="tvPGrade" formatted="false">Grau de pureza do soluto (%):</string>
    <string name="tvVolSolAq">Volume da solução aquosa desejada (mL):</string>
    <string name="tvPercFormula">Formula Percentual:</string>
    <string name="tvMinFormula">Formula Minima:</string>
</resources>