<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".interactions.Interaction6Activity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvInt61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvInt61"/>

            <TextView
                android:id="@+id/tvInt62"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvInt62"/>

            <TextView
                android:id="@+id/tvHCl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/tvHcl"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvVolHcl"/>

            <EditText
                android:id="@+id/etVolHCl"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/tvNaOH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNaOH"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvVolNaoh"/>

            <EditText
                android:id="@+id/etVolNaOH"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMolaridade"/>

            <EditText
                android:id="@+id/etMolarNaOH"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btCalc"
                />

            <TextView
                android:id="@+id/tvResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResults"/>

            <TextView
                android:id="@+id/tvNMolsHCl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNMolsHCl"/>

            <TextView
                android:id="@+id/tvMHCl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvMolaridadeHCl"/>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
