<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <include layout="@layout/molecular_formula"/>

            <TextView
                android:id="@+id/tvSolu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSolu"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                    android:id="@+id/radioGroupEstate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbLiquid"
                    android:id="@+id/rbLiquid" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbSolid"
                    android:checked="true"
                    android:id="@+id/rbSolid"/>

                </RadioGroup>

            <include layout="@layout/mass"/>

            <TextView
                android:text="@string/tvPurity"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etPurity"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="3dp"
                android:background="@drawable/edittext"/>

            <LinearLayout
                android:id="@+id/densSoluLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    android:text="@string/tvDensSol"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/etDensSolu"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="7dp"
                    android:paddingBottom="3dp"
                    android:background="@drawable/edittext"/>

            </LinearLayout>


            <TextView
                android:text="@string/tvSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

            <RadioGroup
                android:id="@+id/radioGroupSolvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbWater"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/rbWater" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbEthanol"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/rbEthanol"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbBenzene"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/rbBenzene"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/rbAcetic"
                    android:id="@+id/rbAcetic"/>

            </RadioGroup>

            <TextView
                android:text="@string/tvVolSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etVolSol"
                android:inputType="numberDecimal"
                android:paddingLeft="5dp"
                android:paddingTop="7dp"
                android:paddingBottom="3dp"
                android:background="@drawable/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btCalc" />


            <TextView
                android:id="@+id/tvMol"
                android:text="@string/tvMol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tvMol2"
                android:text="@string/tvMol2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvmm"
                android:text="@string/tvmm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvmv"
                android:text="@string/tvmv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvvv"
                android:text="@string/tvvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

    <include layout="@layout/keyboard_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"/>

</LinearLayout>
