<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Interaction81Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/molecular_formula" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSolu"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbSolid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbSolid"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rbLiquid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbLiquid"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvUni"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbMolar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbMolar"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/rbMassmVolv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbMassm"
                    />

            </RadioGroup>


            <TextView
                android:id="@+id/tvDensSolu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/tvDensSol"/>

            <EditText
                android:id="@+id/etDensSolu"
                android:inputType="numberDecimal"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPGrade"/>

            <EditText
                android:id="@+id/etPGrade"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvConcMPerc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvConcD"/>

            <EditText
                android:id="@+id/etConc"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvVolSolAq"/>

            <EditText
                android:id="@+id/etVolSolAq"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btCalc"/>

            <TextView
                android:id="@+id/tvResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvResults"/>

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>


    <include layout="@layout/keyboard_layout" />

</LinearLayout>


