<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interactions.Interaction3Activity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <include
                layout="@layout/molecular_formula"/>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <include layout="@layout/mass" />

                <Button
                    android:id="@+id/btCalc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btCalc" />

                <TextView
                    android:id="@+id/tvMolarMass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvMolarMass"
                    />

                <TextView
                    android:id="@+id/tvNMols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvNMols"/>

                <TextView
                    android:id="@+id/tvPercFormula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvPercFormula"/>

                <TextView
                    android:id="@+id/tvMinFormula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/tvMinFormula"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <include layout="@layout/keyboard_layout" />

</LinearLayout>
